future-sir-gitops/overlays/dev/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: future-sir-frontend
  labels:
    app.kubernetes.io/name: future-sir-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: future-sir-dev.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: future-sir-frontend
                port:
                  name: http
